# customer_support_multi_agent_desk

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  support_desk.db-shm  support_desk.db-wal  test_main.http
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  escalation_agent.py  faq_agent.py  order_agent.py  quality_review_agent.py  refund_agent.py  technical_agent.py  triage_agent.py
app/api/: admin.py  approvals.py  chat.py  evals.py  orders.py  tickets.py  traces.py
app/db/: __init__.py  seed.py
app/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py  tool_guardrails.py
app/schemas/: __init__.py  admin.py  agent_outputs.py  conversation.py  customer.py  kb.py  order.py  refund.py  ticket.py
app/services/: __init__.py  agent_runner.py  approval_service.py  audit_service.py  conversation_state.py  openai_agent_adapter.py  rag_service.py
app/tools/: __init__.py  customer_tools.py  kb_tools.py  order_tools.py  refund_tools.py  ticket_tools.py
data/: eval_cases.jsonl  seed_customers.json  seed_orders.json
docs/: architecture.md  demo_script.md  eval_report.md  showcase_copy.md
evals/: metrics.py  run_evals.py
frontend/: app.js  index.html  styles.css
scripts/: index_kb.py  run_demo.py  seed_db.py
tests/: conftest.py  test_approval_api.py  test_chat_api.py  test_config.py  test_evals.py  test_guardrails.py  test_health.py  test_kb.py  test_openai_agent_adapter.py  test_orders_admin_api.py  test_refund_guardrails.py  test_routing.py  test_scripts.py  test_tools.py  test_ui_api.py
(+7 files in other folders)
